Manifest/nginx-deploy-fargate.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-fargate
  template:
    metadata:
      labels:
        app: nginx-fargate
      containers:
      - image: public.ecr.aws/t8d7x5u3/t4-ecr:latest
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
      nodeSelector:
        app: nginx-fargate
