Manifest/nginx-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: nginx
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: 194453983284.dkr.ecr.ap-northeast-2.amazonaws.com/last:web
        name: nginx
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 80
      nodeSelector:
        app: nginx
