Manifest/tomcat-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: tomcat
  name: tomcat
  namespace: was
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
      - image: 194453983284.dkr.ecr.ap-northeast-2.amazonaws.com/last:was
        name: tomcat
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
      nodeSelector:
        app: tomcat
