Manifest/tomcat-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tomcat-service
  namespace: was
spec:
  selector:
    app: tomcat
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
  clusterIP: 172.20.108.207
